# src/Bpo.Dms.WebApp/Data/ProductType.cs
@@ -1,0 +1,20 @@
+﻿namespace Bpo.Dms.WebApp.Data
+{
+    public enum ProductType
+    {
+        /// <summary>
+        /// Không xác định
+        /// </summary>
+        Unknown = 0,
+
+        /// <summary>
+        /// Đồ ăn
+        /// </summary>
+        Food = 1,
+
+        /// <summary>
+        /// Nước uống
+        /// </summary>
+        Drink = 2,
+    }
+}
